# eager-SGD

./: README.md
eager-SGD-modules/deep500/deep500/frameworks/tensorflow/custom_operators/: CMakeLists.txt  tf.py
eager-SGD-modules/fflib2/: CMakeLists.txt
eager-SGD-modules/fflib2/benchmark/: allreduce.c
eager-SGD-modules/fflib2/evaluation/: CMakeLists.txt  activation_1.c  activation_tree.c  activation_tree_multiple.c  allreduce.c  allreduce_buffers_fflib_managed.c  allreduce_buffers_fflib_managed_inplace.c  allreduce_buffers_user_managed.c  allreduce_buffers_user_managed_callback.c  allreduce_buffers_user_managed_inplace.c  allreduce_inplace.c  custom_computation.c  first_dep.c  limiter.c  ping_modify_pong.c  ping_pong_dep.c  ping_pong_schedule.c  rand_allreduce.c  rand_allreduce_correctness.c  randomsgd.c  rsgd.c  rsgd_synch_recv.c  rsgd_synch_send.c  send_recv.c  simple_computation.c  solo_allreduce_correctness.c  solo_allreduce_multiple.c  solo_allreduce_single.c  ssgd.c  ssgd_synch_recv.c  ssgd_synch_send.c  test_activation.sh
eager-SGD-modules/fflib2/src/: ff.c  ff.h  ffbind.h  ffbuffer.c  ffbuffer.h  ffcallback.c  ffcallback.h  ffcomp.c  ffcomp.h  ffdatatype.c  ffdatatype.h  ffinternal.h  fflocks.h  ffnop.c  ffnop.h  ffop.c  ffop.h  ffop_default_progresser.c  ffop_default_progresser.h  ffop_scheduler.c  ffop_scheduler.h  ffprogress.c  ffprogress.h  ffrecv.c  ffrecv.h  ffschedule.c  ffschedule.h  ffsend.c  ffsend.h  ffstorage.c  ffstorage.h
eager-SGD-modules/fflib2/src/bindings/: mpi_binding.c  mpi_binding.h
eager-SGD-modules/fflib2/src/colls/: ffactivation.c  ffallreduce.c  ffcollectives.h  ffrand_allreduce.c  ffsolo_allreduce.c  ffsolo_limiter.c
eager-SGD-modules/fflib2/src/components/gcomp/: ffgcomp.c  ffgcomp.h  ffgcomp_types.h  ffop_gcomp.c  ffop_gcomp.h  ffop_gcomp_operator.c  ffop_gcomp_operator.h
eager-SGD-modules/fflib2/src/components/mpi/: ffmpi.c  ffmpi.h  ffmpi_types.h  ffop_mpi.c  ffop_mpi.h  ffop_mpi_init.c  ffop_mpi_progresser.c  ffop_mpi_progresser.h  ffop_mpi_recv.c  ffop_mpi_send.c
eager-SGD-modules/fflib2/src/utils/: ffarman.c  ffarman.h  ffqman.c  ffqman.h
eager-SGD-modules/fflib2/utils/: allreduce_2nodes.ps  allreduce_8nodes.ps  opgraph.sh
test-models/tf-models-r1.11/official/resnet/: build_imagenet_data.py  cifar10_main.py  imagenet_main_eagersgd.py  imagenet_main_eagersgd_one_epoch.py  imagenet_main_hvd.py  lars_util.py  resnet_model.py  resnet_run_loop.py  resnet_run_loop_hvd_cifar10.py  resnet_run_loop_hvd_imagenet_300.py  resnet_run_loop_solo_imagenet_300.py
test-models/tf-models-r1.11/official/resnet/test_scripts_imagenet/: daint_eagersgd_imagenet.sh  daint_hvd_imagenet.sh  synchm.sh
test-models/tf-models-r1.11/official/transformer/: transformer_main.py
test-models/tf-models-r1.11/official/transformer/model/: attention_layer.py  embedding_layer.py  ffn_layer.py  model_params.py  model_utils.py  transformer.py
test-models/tf-models-r1.11/official/transformer/utils/: dataset.py  dataset.py_bk1  metrics.py
test-models/tf-models-r1.11/official/utils/: opt_esgd_majority_imagenet_imbalance.py  opt_esgd_solo_imagenet_imbalance.py  opt_sgd_mpi.py
test-models/tf-models-r1.11/official/utils/logs/: hooks_helper.py
